; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/msi/extr_storages.c_storages_modify_assign.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/msi/extr_storages.c_storages_modify_assign.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tagMSIVIEW = type { i32 }

@ERROR_SUCCESS = common dso_local global i64 0, align 8
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.tagMSIVIEW*, i32*)* @storages_modify_assign to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @storages_modify_assign(%struct.tagMSIVIEW* %0, i32* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca %struct.tagMSIVIEW*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store %struct.tagMSIVIEW* %0, %struct.tagMSIVIEW** %4, align 8
  store i32* %1, i32** %5, align 8
  %9 = load %struct.tagMSIVIEW*, %struct.tagMSIVIEW** %4, align 8
  %10 = bitcast %struct.tagMSIVIEW* %9 to i32*
  store i32* %10, i32** %6, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = call i64 @storages_find_row(i32* %11, i32* %12, i64* %8)
  store i64 %13, i64* %7, align 8
  %14 = load i64, i64* %7, align 8
  %15 = load i64, i64* @ERROR_SUCCESS, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %17, label %21

17:                                               ; preds = %2
  %18 = load %struct.tagMSIVIEW*, %struct.tagMSIVIEW** %4, align 8
  %19 = load i32*, i32** %5, align 8
  %20 = call i64 @storages_modify_update(%struct.tagMSIVIEW* %18, i32* %19)
  store i64 %20, i64* %3, align 8
  br label %26

21:                                               ; preds = %2
  %22 = load %struct.tagMSIVIEW*, %struct.tagMSIVIEW** %4, align 8
  %23 = load i32*, i32** %5, align 8
  %24 = load i32, i32* @FALSE, align 4
  %25 = call i64 @STORAGES_insert_row(%struct.tagMSIVIEW* %22, i32* %23, i32 -1, i32 %24)
  store i64 %25, i64* %3, align 8
  br label %26

26:                                               ; preds = %21, %17
  %27 = load i64, i64* %3, align 8
  ret i64 %27
}

declare dso_local i64 @storages_find_row(i32*, i32*, i64*) #1

declare dso_local i64 @storages_modify_update(%struct.tagMSIVIEW*, i32*) #1

declare dso_local i64 @STORAGES_insert_row(%struct.tagMSIVIEW*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
